<resources>
    <string name="app_name">ShulovShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">eshop</string>
    <string name="pattran">-------------------</string>

    <string name="sendmoney">আমাদের বিকাশ নম্বরটি</string>
    <string name="bikash">01755111413(personal)</string>
    <string name="sendtext">নম্বরটিতে আপনার অর্থ প্রেরণ করুন</string>
    <string name="details">টাকা পাঠানোর পরে নীচের লিখিত নিয়মগুলি অনুসরণ করুন:</string>
    <string name="order">আপনার বিকাশ নম্বরটি লিখুন যা থেকে আপনি আমাদের টাকা পাঠিয়েছেন :</string>
    <string name="finalorder">যদি প্রতিটি জিনিস ঠিক থাকে তবে অর্ডার বোতামটি টিপুন</string>
    <string name="finalword">আমরা আপনাকে এসএমএসের মাধ্যমে সমস্ত বিবরণ পাঠাব</string>
    <string name="call">যদি আপনি কিছু জানতে চান এই নম্বরে কল করুন</string>
    <string name="address">আপনার ঠিকানা লিখুন:</string>
    <string name="roket">আমাদের রকেট নম্বরটি</string>
    <string name="contactnumber">আপনার ব্যক্তিগত ফোন নম্বরটি লিখুন</string>
    <string name="ad_attribution">Ad</string>

    <!--main-->
    <!--        admob-->
            <string name="googleadsapplicationid">ca-app-pub-4823537818890363~4641906297</string>
            <string name="banner_ID_1">ca-app-pub-4823537818890363/6857006093</string>
            <string name="banner_ID_2">ca-app-pub-4823537818890363/6857006093</string>
            <string name="native_ID_1">ca-app-pub-4823537818890363/4996790209</string>
            <string name="native_ID_2">ca-app-pub-4823537818890363/4996790209</string>
            <string name="videoads1">ca-app-pub-4823537818890363/6665434407</string>
            <string name="instatianlads1">ca-app-pub-4823537818890363/4230842758</string>

    <!--    &lt;!&ndash;    main fb&ndash;&gt;-->

                <string name="fb_banner1">249933149664944_249938812997711</string>
                <string name="fb_int_1">249933149664944_253704842621108</string>
                <string name="fb_rectangle_ads">249933149664944_260150465309879</string>


    <string name="fb">https://www.facebook.com/groups/1166929073679754</string>
    <string name="youtube">https://www.youtube.com/channel/UC7sS1rBaAMypmr6nBCixIAQ?view_as=subscriber</string>
    <string name="email">shulovshopbd@gmail.com</string>


    <!--    fb login-->
    <string name="facebook_app_id">528068024671871</string>
    <string name="fb_login_protocol_scheme">fb528068024671871</string>


    <!--    fb ads-->


    <!--    &lt;!&ndash;    &lt;!&ndash;    test:&ndash;&gt;&ndash;&gt;-->
    <!--    &lt;!&ndash;    &lt;!&ndash;    admob + fb &ndash;&gt;&ndash;&gt;-->
<!--    <string name="googleadsapplicationid">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="banner_ID_1">"ca-app-pub-3940256099942544/6300978111"</string>-->
<!--    <string name="banner_ID_2">"ca-app-pub-3940256099942544/6300978111"</string>-->
<!--    <string name="native_ID_1">"ca-app-pub-3940256099942544/2247696110"</string>-->
<!--    <string name="native_ID_2">"ca-app-pub-3940256099942544/2247696110"</string>-->
<!--    <string name="videoads1">ca-app-pub-3940256099942544/5224354917</string>-->
<!--    <string name="instatianlads1">ca-app-pub-3940256099942544/8691691433</string>-->
    <!--    &lt;!&ndash;&lt;!&ndash;    fb&ndash;&gt;&ndash;&gt;-->
<!--    <string name="fb_banner1">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>-->
<!--    <string name="fb_int_1">YOUR_PLACEMENT_ID</string>-->
    <!--    &lt;!&ndash;    &lt;!&ndash;    admob + fb &ndash;&gt;&ndash;&gt;-->

    <string name="title">ShulovShop শুধু একটি ব্যবসা কেন্দ্রিক অ্যাপস নয়।</string>
    <string name="full">আমরা সমাজের সুবিধাবঞ্চিত মানুষদের নিয়েও কাজ করে থাকি। ShulovShop অ্যাপসটিতে আমরা যে কিছু পরিমাণ অ্যাডস্ ডিসপ্লে করে থাকি সেখান থেকে যে অর্থ উপার্জন হয় তার বেশিরভাগই আমরা ব্যয় করে থাকি সুবিধাবঞ্চিত মানুষদের জন্য। এই কাজে অংশীদার হতে পারেন আপনিও। কারণ আপনার দেখা কিছু অ্যাডস্ থেকেই যে অর্থ উপার্জন হবে আমরা তা  পৌঁছে দিব সমাজের সুবিধাবঞ্চিতদের কাছে।</string>

    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>
    <string name="alert">আপনি আরও পণ্য যুক্ত করতে চান? বা আপনি এখন এই পণ্য কিনতে চান?</string>
    <string name="addmore">আমি আরও পণ্য যুক্ত করতে চাই</string>
    <string name="butnow">আমি এখন এটি কিনতে চাই</string>
    <string name="tk">অর্ডার সাব্মিট করার ১৫ মিনিটস এর ভিতর এই নম্বরটিতে আপনার অর্থ প্রেরণ করুন</string>


</resources>