<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="#FFF"
    tools:context=".pyment.Pyment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
        >


    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:text="Total Amount:(Tk)"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/sim1"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/sim2"
            android:layout_marginTop="2dp"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/rsim1"
            android:layout_marginTop="2dp"
            android:textSize="20dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/rsim2"
            android:layout_marginTop="2dp"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pattran"
            >

        </TextView>
        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/tk"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pattran"
            >

        </TextView>
        <TextView
            android:layout_marginTop="2dp"
            android:text="@string/order"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="নাম্বার">

        </EditText>
        <TextView
            android:layout_marginTop="18dp"
            android:text="@string/address"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </TextView>
        <EditText
            android:id="@+id/address"
            android:hint="ঠিকানা"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

        </EditText>
        <TextView
            android:layout_marginTop="18dp"
            android:text="@string/contactnumber"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </TextView>
        <EditText
            android:id="@+id/contact"
            android:hint="নাম্বার"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

        </EditText>
        <TextView
            android:layout_marginTop="8dp"
            android:text="@string/finalorder"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>
        <Button
            android:id="@+id/order"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/send_otp"
            android:text="অর্ডার"
            >
        </Button>

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/finalword"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>
        <TextView
            android:layout_marginTop="8dp"
            android:text="@string/call"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/helpnumber"
            android:layout_marginTop="8dp"
            android:textSize="15dp"
            android:fontFamily="@font/andika"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        </TextView>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>